Started with webring, about halfway

--- a/templates/carousel/create.html.twig
+++ b/templates/carousel/create.html.twig
@@ -2,7 +2,8 @@
 
 {% block title %}{% if carouselform.vars.data.id is not empty %}Update{% else %}Create{% endif %} Carousel{% endblock %}
 
-{% block body %}                    <div class="col p-3" id="hb-createupdate-hotbox">
+{% block body %}
+<div class="col p-3" id="hb-createupdate-carousel">
     <div class="row mb-3">
         <h1 class="h1 mb-3 font-weight-normal">{% if carouselform.vars.data.id is not empty %}Update{% else %}Create{% endif %} Carousel</h1>
     </div>
