Better comic control in webring

--- a/templates/webring/create.html.twig
+++ b/templates/webring/create.html.twig
@@ -62,7 +62,7 @@
     {% if webringform.vars.data.id is not empty %}
         <div class="row border-top mb-2">
             <div class="col">
-                <div class="hb-webring" data-webring="{{ webring.code }}" data-comic="{{ comicCode }}"></div>
+                <div class="hb-webring" data-webring="{{ webring.code }}" data-comic=""></div>
             </div>
         </div>
         <div class="row border-top mb- pt-2">
