--- a/templates/public/hotbox.js.twig
+++ b/templates/public/hotbox.js.twig
@@ -268,6 +268,7 @@ function Webring() {
         let overflow = "";
 //        let border = "border: 1px solid red;"
         let code = data.code;
+        addStyle(".hb-webring { display: inline-block; }");
         addStyle(".webring-" + code + " { " + border + " text-align:center; max-width: " + data.width + "px; width: " + data.width + "px; max-height: " + data.height + "px; height: " + data.height + "px; text-align: center; " + overflow + " }");
         addStyle(".webring-" + code + " .nav-box { " + border + " position:relative; float: left; vertical-align: middle; max-width: " + data.nav + "px; width: " + data.nav + "px; max-height: " + data.height + "px; height: " + data.height + "px; text-align: center; }");
         addStyle(".webring-" + code + " .ring-item { " + border + " position: relative; float: left; }");
@@ -282,7 +283,8 @@ function Webring() {
 
         let output = "<div class='hb-webring-webring webring-" + code + "'><div class='webring'>"
         // Previous icon
-        output += "<div class='nav-box'><a href='" + data['previous'] + "' target='_blank'><i class='fas fa-backward-step'></i></a></div>";
+        output += "<div class='nav-box'><a href='" + data['previous'] + "' target='_blank'>" + data['navprev'] + "</a></div>";
+
         console.log(data['previous']);
         for(const d of data['items']) {
             console.log(d.url);
@@ -290,7 +292,7 @@ function Webring() {
         }
 
         // Next icon
-        output += "<div class='nav-box'><a href='" + data['next'] + "' target='_blank'><i class='fas fa-forward-step'></i></a></div>";
+        output += "<div class='nav-box'><a href='" + data['next'] + "' target='_blank'>" + data['navnext'] + "</a></div>";
         console.log(data['next']);
 
         output += "</div></div>";
