--- a/templates/comic/create.html.twig
+++ b/templates/comic/create.html.twig
@@ -77,7 +77,7 @@
 
                                             </div>
                                             <div class="row">
-                                                <form method="POST" enctype="multipart/form-data" action="{{ url('app_uploadcarouselimage', {comicid:comicform.vars.data.id, imageid: cimg.id  }) }}">
+                                                <form method="POST" enctype="multipart/form-data" action="{{ url('app_uploadcarouselimage', {comicid:comicform.vars.data.id, carouselid: carousel.id  }) }}">
                                                     <input type="file" name="imagefile" class="hidden-file-input" id="comic_image_upload_current_{{ cimg.id }}" onchange="form.submit()" value="Upload File" />
                                                     <div class="row mt-3">
                                                         <div class="btn-group" role="group">
